--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <div class="content">
                 <nav class="navbar">
-                    <img src="./assets/img/Logo.svg" alt="Besnik" />
+                    <img src="./assets/img/logo.svg" alt="Besnik" />
 
                     <ul>
                         <li><a href="#!">Home</a></li>
@@ -53,7 +53,7 @@
             <div class="content">
                 <div class="row">
                     <!-- Logo -->
-                    <img src="./assets/img/Logo.svg" alt="Besnik" />
+                    <img src="./assets/img/logo.svg" alt="Besnik" />
                     <!-- Star -->
                     <img
                         src="./assets/img/Star.svg"
