--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <header class="header">
             <div class="content">
                 <nav class="navbar">
-                    <img src="./assets/img/logo.svg" alt="Besnik" />
+                    <a href="#!">
+                        <img src="./assets/img/logo.svg" alt="Besnik"
+                    /></a>
 
                     <ul>
                         <li><a href="#!">Home</a></li>
