--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="content">
                 <nav class="navbar">
                     <a href="#!">
-                        <img src="./assets/img/Logo.svg" alt="Besnik"
+                        <img src="./assets/img/logo.svg" alt="Besnik"
                     /></a>
                     <ul>
                         <li><a href="#!">Home</a></li>
