--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         <title>F8 - Project 1</title>
     </head>
     <body>
-        <main>
+        <main id="home">
             <header class="fix-header">
                 <div class="content">
                     <nav class="navbar">
-                        <a href="#!">
+                        <a href="\">
                             <img src="./assets/img/logo.svg" alt="Besnik"
                         /></a>
                         <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#featured">Features</a></li>
                             <li><a href="#!">Services</a></li>
                             <li><a href="#!">Resources</a></li>
                             <li><a href="#!">Contact</a></li>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
             </div>
-            <div class="featured">
+            <div class="featured" id="featured">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
